more endpoint for reports